--- a/src/components/comment-bar/comment-bar.pug
+++ b/src/components/comment-bar/comment-bar.pug
@@ -3,15 +3,17 @@ include /components/button/__like/button__like.pug
 mixin commentBar( items=[] )
   each item in items
     .comment-bar
-      .comment-bar__avatar
-        img( src=require(`/src/assets/images/raster/avatars/${ item.avatarname }.png`) )
-      .comment-bar__title
-        .comment-bar__title_name #{ item.name }
-        .comment-bar__title_days-ago #{ item.daysago }
-      .comment-bar__like-button-wrap
-        +likeButtons([{
-          groupname: item.likebtn.groupname,
-          pressed: item.likebtn.pressed,
-          likecount: item.likebtn.likecount
-        }])
-      .comment-bar__comment-text #{ item.text }
+      .comment-bar__avatar-section
+        .comment-bar__avatar
+          img( src=require(`/src/assets/images/raster/avatars/${ item.avatarname }.png`) )
+        .comment-bar__like-button
+          +likeButtons([{
+            groupname: item.likebtn.groupname,
+            pressed: item.likebtn.pressed,
+            likecount: item.likebtn.likecount
+          }])
+      .comment-bar__text-section.custom-font-style_body
+        .comment-bar__title
+          .comment-bar__title_username #{ item.name }
+          .comment-bar__title_days-ago #{ item.daysago }
+        .comment-bar__text #{ item.text }
