--- a/src/components/expandable/__dropdown/expandable__dropdown.scss
+++ b/src/components/expandable/__dropdown/expandable__dropdown.scss
@@ -4,10 +4,10 @@
   position: absolute;
   display: none;
   top: 43px;
-  padding: 7px 7px 7px 15px;
   width: inherit;
   z-index: 20;
-  background-color: #fff;
+  padding: 7px 7px 7px 15px;
+  background-color: white;
   box-shadow: 0px 10px 20px rgba($valhalla, 0.05);
   border-color: rgba($valhalla, .5);
   border-radius: 0px 0px 4px 4px;
@@ -19,10 +19,6 @@
     height: 30px;
   
     &_name {
-      color: $valhalla;
-      font-weight: bold;
-      font-size: 12px;
-      line-height: 15px;
       text-transform: uppercase;
     }
   }
