Refactored radio-button, added body-plain text style as component defaults

--- a/src/components/button/__radio/button__radio.pug
+++ b/src/components/button/__radio/button__radio.pug
@@ -5,4 +5,4 @@ mixin radioButtons( items=[] )
 
       label.radio-button( for=item.id )
         input.radio-button__elem( type='radio' name='sex' id=item.id checked=buttonChecked )
-        label.radio-button__label( for=item.id ) #{item.label}
+        label.radio-button__label.custom-font-style_body-plain( for=item.id ) #{item.label}
