Added new card - room-booking

--- a/src/components/card/__find-room/card__find-room.pug
+++ b/src/components/card/__find-room/card__find-room.pug
@@ -35,7 +35,7 @@ mixin cardFindRoom()
       +inputs([
         {
           id: "find-room__guests",
-          title: "dropdown",
+          title: "гости",
           placeholder: "Сколько гостей",
           dropdown: {
             options: [
