--- a/src/components/card/__room-booking/card__room-booking.pug
+++ b/src/components/card/__room-booking/card__room-booking.pug
@@ -79,6 +79,7 @@ mixin cardRoomBooking()
       .room-booking__calc_summary.custom-font-style_h2
         .room-booking__sub-container
           span Итого
+          span.room-booking__sub-container_divider
           span 38 081₽
 
     .room-booking__button_submit
