Minor visual fixes

--- a/src/components/card/__room-booking/card__room-booking.pug
+++ b/src/components/card/__room-booking/card__room-booking.pug
@@ -12,7 +12,7 @@ mixin cardRoomBooking()
           span.room-booking__title_room-number.custom-font-style_h1 888
           span.room-booking__title_room-class люкс
         .room-booking__price.custom-font-style_body-plain
-          span.room-booking__price_value 9990
+          span.room-booking__price_value 9 990
           span.room-booking__price_symbol ₽ 
           span.room-booking__price_addition в сутки
 
