--- a/src/components/input/_dropdown/input_dropdown.pug
+++ b/src/components/input/_dropdown/input_dropdown.pug
@@ -5,13 +5,13 @@ mixin inputDropdown( item )
   - const expanderActiveClass = dropdown.expanded ? 'expander_active' : ''
   - const iconFlippedClass = dropdown.expanded ? 'icon_flipped' : ''
 
-  input.input__frame.input__dropdown.expander( id=item.id placeholder=item.placeholder checked=dropdown.expanded readonly )
+  input.input__frame.dropdown.expander( id=item.id placeholder=item.placeholder checked=dropdown.expanded readonly )
   .input__icon_expand( class=iconFlippedClass )
     +materialIcon('expand_more', item.id )
-  .dropdown.expander__aim( class=expanderActiveClass )
+  .input__dropdown.expander__aim( class=expanderActiveClass )
     each option in item.dropdown.options
-      .dropdown__option
-        span.dropdown__option_name.custom-font-style_h3 #{option}
-        .dropdown__button_inc 
-        span.dropdown__counter 
-        .dropdown__button_dec
+      .input__dropdown_option
+        span.input__dropdown_name.custom-font-style_h3 #{option}
+        .input__dropdown_button-inc 
+        span.input__dropdown_counter 
+        .input__dropdown_button-dec
