--- a/src/components/input/_dropdown/input_dropdown.scss
+++ b/src/components/input/_dropdown/input_dropdown.scss
@@ -1,6 +1,6 @@
 @import "@variables";
 
-.dropdown {
+.input__dropdown {
   position: absolute;
   display: none;
   top: 43px;
@@ -12,14 +12,14 @@
   border-color: rgba($valhalla, .5);
   border-radius: 0px 0px 4px 4px;
 
-  &__option {
+  &_option {
     display: flex;
     align-items: center;
     margin-bottom: 7px;
     height: 30px;
-  
-    &_name {
-      text-transform: uppercase;
-    }
+  }
+
+  &_name {
+    text-transform: uppercase;
   }
 }
