Fixed expandable-items display switch style

--- a/src/components/input/_dropdown/input_dropdown.scss
+++ b/src/components/input/_dropdown/input_dropdown.scss
@@ -2,7 +2,7 @@
 
 .input__dropdown {
   position: absolute;
-  display: none;
+  visibility: hidden;
   top: 43px;
   width: inherit;
   z-index: 20;
