Fixed room-booking card

--- a/src/components/card/__room-booking/card__room-booking.pug
+++ b/src/components/card/__room-booking/card__room-booking.pug
@@ -10,7 +10,7 @@ mixin cardRoomBooking()
         .room-booking__title
           span.room-booking__title_prefix.custom-font-style_body-plain № 
           span.room-booking__title_room-number.custom-font-style_h1 888
-          span.room-booking__title_room-class люкс
+          span.room-booking__title_room-class ЛЮКС
         .room-booking__price.custom-font-style_body-plain
           span.room-booking__price_value 9 990
           span.room-booking__price_symbol ₽ 
