Added pages titles

--- a/src/pages/index/index.pug
+++ b/src/pages/index/index.pug
@@ -1,6 +1,9 @@
 include /components/logo/logo.pug
 include /components/navigation-bar/navigation-bar.pug
 
+head 
+  title FEDSEC / Index
+
 body.ui-kit__body
   header.ui-kit__header
     +logo({ type: "monochrome", disabled: true })
