--- a/src/pages/ui-kit/__form-elements/ui-kit__form-elements.pug
+++ b/src/pages/ui-kit/__form-elements/ui-kit__form-elements.pug
@@ -15,6 +15,9 @@ include /components/button/__checkbox/button__checkbox.pug
 include /components/button/__star-rate/button__star-rate.pug
 include /components/button/__mean-oval/button__mean-oval.pug
 
+head 
+  title UI KIT / Form Elements
+
 body.ui-kit__body.bg-color_white
   header.ui-kit__header
     +logo({ type: "monochrome" })
