--- a/src/pages/404/404.pug
+++ b/src/pages/404/404.pug
@@ -1,6 +1,9 @@
 include /components/footer/footer.pug
 include /components/header/header.pug
 
+head 
+  title 404 / Not Found
+
 body.ui-kit__body.bg-color_whisper
   header.ui-kit__header
     +header({authorization: true})
