--- a/src/pages/ui-kit/__cards/ui-kit__cards.pug
+++ b/src/pages/ui-kit/__cards/ui-kit__cards.pug
@@ -5,6 +5,9 @@ include /components/card/__find-room/card__find-room.pug
 include /components/card/__login/card__login.pug
 include /components/card/__room-booking/card__room-booking.pug
 
+head 
+  title UI KIT / Cards
+
 body.ui-kit__body.bg-color_whisper
   header.ui-kit__header
     +logo({ type: "monochrome" })
