--- a/src/pages/ui-kit/__colors-n-type/ui-kit__colors-n-type.pug
+++ b/src/pages/ui-kit/__colors-n-type/ui-kit__colors-n-type.pug
@@ -2,6 +2,9 @@ include /components/logo/logo.pug
 include /components/color-sample/color-sample.pug
 include /components/type-sample/type-sample.pug
 
+head 
+  title UI KIT / Colors & Type
+
 body.ui-kit__body.bg-color_white
   header.ui-kit__header
     +logo({ type: "monochrome" })
