Added input_date-picker scss and js docs

--- a/src/components/input/_date-picker/input_date-picker.pug
+++ b/src/components/input/_date-picker/input_date-picker.pug
@@ -4,4 +4,4 @@ mixin inputDatePicker( item )
   input.input__frame.expander( id=item.id placeholder=item.placeholder readonly )
   .input__icon_expand
     +materialIcon('expand_more', item.id )
-  .date-picker.expander__aim
+  .input__date-picker.date-picker.expander__aim( id=`dp-${item.id}` )
