--- a/src/components/card/__room-sample/card__room-sample.pug
+++ b/src/components/card/__room-sample/card__room-sample.pug
@@ -2,8 +2,12 @@ include /components/button/__star-rate/button__star-rate.pug
 
 mixin cardRoomSample()
   .room-sample
-    .room-sample__image-container
-      img( src=require(`/src/assets/images/raster/avatars/${ item.avatarname }.png`) )
+    .room-sample__container_top
+      .room-sample__image
       .room-sample__arrow_left 
+      .room-sample__image-listing-indicator
       .room-sample__arrow_right
-    .room-sample__room-info-container 
+    .room-sample__container_bottom
+      .room-sample__title
+      .room-sample__rate-n-rewievs
+        +starRateButtons([4])
