--- a/src/pages/ui-kit/__form-elements/ui-kit__form-elements.pug
+++ b/src/pages/ui-kit/__form-elements/ui-kit__form-elements.pug
@@ -134,7 +134,8 @@ body.ui-kit__body.bg-color_white
           .form-elements__element
             +titleBar("rate button")
             .star-rate__line-array.twins-grid-line
-              +starRateButtons([4, 5])
+              +starRateButton(4)
+              +starRateButton(5)
       .form-elements__column.column_right
         .form-elements__block.block__range-slider
           +rangeSlider({
