Refactored toggle button and its containers

--- a/src/components/button/__toggle/button__toggle.pug
+++ b/src/components/button/__toggle/button__toggle.pug
@@ -1,7 +1,6 @@
-mixin toggleButtons( items=[] )
-  each item in items
-    - const buttonChecked = item.pressed ? true : false
+mixin toggleButton( item )
+  - const buttonChecked = item.pressed ? true : false
 
-    .toggle-button 
-      input.toggle-button__elem( type='checkbox' checked=buttonChecked )
-      label.toggle-button__label.custom-font-style_body #{item.label}
+  .toggle-button 
+    input.toggle-button__elem( id=item.id type='checkbox' checked=buttonChecked )
+    label.toggle-button__label.custom-font-style_body( for=item.id ) #{item.label}
